tests/NormalTests/paczka1/fuzzy1/60656096.err
Error in line 5: 9Cu5w S721 77,7
Error in line 2: oq68CP S721 64,2
Error in line 22: cuL06aSUi1 A868 4,9
Error in line 25: 9Cu5w S572 318,3
Error in line 31: 9Cu5w S721 92,2
